--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <!-- Project Name: JavaJam Web Site (HW14)  
      Author: Paola Wollants 
      Date Last Modified: April 8, 2019
+	 
+Missing closing div for wrapper in all files...
 -->
 <html lang="en">
 <head>
@@ -52,5 +54,6 @@ Ellison Bay, WI 54210<br>
 <small><i> Copyright & Copy; 2019 JavaJam Coffee House <br>
 </i></small>
 </footer>
+</div>
 </body>
 </html>
