--- a/menu.html
+++ b/menu.html
@@ -15,6 +15,7 @@
 <h1>JavaJam Coffee House</h1>
 </header>
 <nav>
+WRONG LINKS!!
     <a href="JavaJam Web Site (Home).html">Home</a> &nbsp;
     <a href="JavaJam Web Site (Menu).html">Menu</a> &nbsp;
     <a href="JavaJam Web Site (Music).html">Music</a> &nbsp;
@@ -50,5 +51,6 @@ the barista for details.<br></p>
 <small><i> Copyright & Copy; 2019 JavaJam Coffee House <br>
 </i></small>
 </footer>
+</div>
 </body>
 </html>
